--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@reduxjs/toolkit": "^1.8.6",
     "autoprefixer": "^10.4.12",
+    "axios": "^1.1.3",
+    "firebase": "^9.13.0",
     "postcss": "^8.4.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.1.8",
     "web-vitals": "^2.1.4"
@@ -41,5 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5050/api"
 }
